# cookiecutter-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.repo_name }}/: LICENSE  README.md  pyproject.toml  requirements.txt
{{ cookiecutter.repo_name }}/.devcontainer/: .bash_aliases  Dockerfile  README.md  devcontainer.json
{{ cookiecutter.repo_name }}/src/skyhaul/util/: types.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: __main__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/util/: types.py
{{ cookiecutter.repo_name }}/tests/: README.md  conftest.py
{{ cookiecutter.repo_name }}/tests/unit_tests/util/: test_types.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.slug }}/: __init__.py  views.py
{{ cookiecutter.slug }}/: README.md
{{ cookiecutter.slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.slug }}/src/{{ cookiecutter.slug }}/: __main__.py
{{ cookiecutter.slug }}/tests/: conftest.py
{{ cookiecutter.slug }}/tests/unit_tests/: conftest.py
{{ cookiecutter.slug }}/tests/unit_tests/util/: test_types.py
