[project]
name = "{{ cookiecutter.repo_name }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
  {name = "{{ cookiecutter.owner_name }}"}
]

[project.urls]
Repository = "{{ cookiecutter.repo_url }}"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = "src"

