[project]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
  "{{ cookiecutter.owner_name }}"
]
packages = [{include = "{{ cookiecutter.slug }}", from="src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Repository = "{{ cookiecutter.repo_url }}"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
mypy_path = "src"

[tool.poetry.dependencies]
python = "^3.11"
flask = "*"
loguru = "*"
platformdirs = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
pythonpath = "src"

